Scripts/main/outfiles/inverse_23495902.out
Loaded module: gcc/12.3.0-binutils-2.40
Loaded module: cuda/12.2.2
2
  File "/zhome/00/b/147112/bioscat/Scripts/main/inverse.py", line 84
    def squaredExponentialDecayTest(protein_structure, datatype, tau = 0.7, ell = 0.04, delta = 0.1 gamma = 1e5, decay_rate=1e-3):
                                                                                                    ^
SyntaxError: invalid syntax
  File "/zhome/00/b/147112/bioscat/Scripts/main/inverse.py", line 84
    def squaredExponentialDecayTest(protein_structure, datatype, tau = 0.7, ell = 0.04, delta = 0.1 gamma = 1e5, decay_rate=1e-3):
                                                                                                    ^
SyntaxError: invalid syntax

------------------------------------------------------------
Sender: LSF System <lsfadmin@hpc.dtu.dk>
Subject: Job 23495902: <invDecayM> in cluster <dcc> Done

Job <invDecayM> was submitted from host <hpclogin1> by user <s194146> in cluster <dcc> at Wed Dec 25 12:38:51 2024
Job was executed on host(s) <4*n-62-12-81>, in queue <gpuh100>, as user <s194146> in cluster <dcc> at Wed Dec 25 12:38:53 2024
</zhome/00/b/147112> was used as the home directory.
</zhome/00/b/147112/bioscat/Scripts/main> was used as the working directory.
Started at Wed Dec 25 12:38:53 2024
Terminated at Wed Dec 25 12:38:55 2024
Results reported at Wed Dec 25 12:38:55 2024

Your job looked like:

------------------------------------------------------------
# LSBATCH: User input
#!/bin/bash
#BSUB -J invDecayM # name
#BSUB -o outfiles/inverse_%J.out # output file
#BSUB -q gpuh100
#BSUB -n 4 ## cores
#BSUB -R "rusage[mem=1GB]" 
#BSUB -W 24:00 # useable time in minutes
##BSUB -N # send mail when done
#BSUB -R "span[hosts=1]"
#BSUB -gpu "num=1:mode=exclusive_process"

module load gcc/12.3.0-binutils-2.40
module load cuda/12.2.2

num_execution=2
echo $num_execution

if [ $num_execution == 1 ];
then
    python inverse.py 3 Retinin2x2 angle_resolved 0.1 1e-3
    python inverse.py 3 demoleus2x2 angle_resolved 0.1 1e-3
fi

if [ $num_execution == 2 ];
then
    python inverse.py 3 Retinin2x2 angle_resolved 0.3 1e-3
    python inverse.py 3 demoleus2x2 angle_resolved 0.3 1e-3
fi
if [ $num_execution == 3 ];
then
    python inverse.py 3 Retinin2x2 angle_resolved 0.1 1e-2
    python inverse.py 3 demoleus2x2 angle_resolved 0.1 1e-2
fi

if [ $num_execution == 4 ];
then
    python inverse.py 3 Retinin2x2 angle_resolved 0.3 1e-2
    python inverse.py 3 demoleus2x2 angle_resolved 0.3 1e-2
fi


------------------------------------------------------------

Successfully completed.

Resource usage summary:

    CPU time :                                   0.62 sec.
    Max Memory :                                 -
    Average Memory :                             -
    Total Requested Memory :                     4096.00 MB
    Delta Memory :                               -
    Max Swap :                                   -
    Max Processes :                              -
    Max Threads :                                -
    Run time :                                   5 sec.
    Turnaround time :                            4 sec.

The output (if any) is above this job summary.

